--- a/res/menu/mainmenu.xml
+++ b/res/menu/mainmenu.xml
@@ -4,4 +4,8 @@
     	  android:icon="@drawable/ic_menu_refresh"
           android:title="@string/refresh" />
 
+	<item 
+		android:id="@+id/settings" 
+		android:title="Settings" 
+		android:icon="@drawable/ic_menu_preferences" />
 </menu>
