--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -6,4 +6,5 @@
 <EditText android:text="" android:id="@+id/username" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
 <TextView android:text="Password:"  android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 <EditText android:text="" android:id="@+id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true"></EditText>
+<Button android:text="Save" android:id="@+id/savebtn" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
 </LinearLayout>
