--- a/res/layout/host.xml
+++ b/res/layout/host.xml
@@ -14,11 +14,7 @@
     
 </TextView>
 
-<LinearLayout 
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    >
+
 
 <TextView 
     android:layout_width="wrap_content"
@@ -26,7 +22,7 @@
     android:padding="8dp"
     android:textSize="10sp" 
     android:background="#AAAA00"
-    android:color="#000000"
+    android:textColor="#000000"
     android:id="@+id/warning">
 </TextView>
 <TextView 
@@ -38,6 +34,5 @@
     android:id="@+id/critical">
 </TextView>
 
-</LinearLayout>
 
 </LinearLayout>
