warn/crit display, wip

--- a/res/layout/service.xml
+++ b/res/layout/service.xml
@@ -7,14 +7,14 @@
 
 <TextView 
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:padding="8dp"
     android:textSize="16sp" 
     android:id="@+id/name">
 </TextView>
 <TextView 
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:padding="8dp"
     android:textSize="10sp" 
     android:id="@+id/output">
